[KS-RU-01]: Fixing the horizontal scrolling on mobile browsers and minor fixes

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -11,3 +11,8 @@
         width: 100%;
     }
 }
+
+html,
+body {
+    overflow-x: hidden;
+}
