--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -16,7 +16,6 @@ body {
     min-height: 100vh;
     /* 5. Improve text rendering */
     -webkit-font-smoothing: antialiased;
-    overflow-x: hidden;
 }
 
 /* 6. Improve media defaults */
